DEV: dark mode, movie di, 404Page

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,28 @@
 
     <title>Movies WebApp</title>
 
+    <style>
+      /* body {
+        --color-background: #fafafa;
+        --color-foreground: #1f2023;
+
+        --image-grayscale: 0;
+        --image-opacity: 100%;
+      }
+      body.dark {
+        --color-background: #1f2023;
+        --color-foreground: #efefef;
+
+        --image-grayscale: 50%;
+        --image-opacity: 90%;
+      }
+
+      img,
+      video {
+        filter: grayscale(var(--image-grayscale)) opacity(var(--image-opacity));
+      } */
+    </style>
+
   </head>
 
   <body>
